Fix grid spacing

--- a/src/components/layouts/Experience.css
+++ b/src/components/layouts/Experience.css
@@ -38,6 +38,7 @@
   cursor: pointer;
   height: 40vh;
   width: 90%;
+  margin-left: 10%;
   background-color: #FFFFFF;
   position: relative;
 }
@@ -46,7 +47,7 @@
   cursor: pointer;
   height: 40vh;
   width: 90%;
-  margin-left: 10%;
+  margin-top: 2%;
   background-color: #FFFFFF;
   position: relative;
 }
@@ -56,6 +57,7 @@
   height: 40vh;
   width: 90%;
   margin-top: 2%;
+  margin-left: 10%;
   background-color: #FFFFFF;
   position: relative;
 }
@@ -65,7 +67,6 @@
   height: 40vh;
   width: 90%;
   margin-top: 2%;
-  margin-left: 10%;
   background-color: #FFFFFF;
   position: relative;
 }
@@ -75,6 +76,7 @@
   height: 40vh;
   width: 90%;
   margin-top: 2%;
+  margin-left: 10%;
   background-color: #FFFFFF;
   position: relative;
 }
